# fluentbit-plugin

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  README.md  build-local.sh  build.sh  clean.sh  go.mod
config/: fluent-bit.conf  parsers.conf  plugins.conf
include/: plugin_utils.h
src/: Dockerfile
src/aks_status/input/: Makefile
src/eventhub/output/: Makefile  out.go
src/input/aks_status/: in.go
src/input/eventhub/: Makefile
src/plugins/filter/: CMakeLists.txt  sample_filter.c
src/plugins/input/: CMakeLists.txt  sample_input.c
src/plugins/output/: CMakeLists.txt  sample_output.c
